--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,8 +41,8 @@ jobs:
       - name: Build
         run: yarn build
 
-      # - name: Test
-      #   run: yarn jest
+      - name: Test
+        run: yarn jest
 
       - name: Coverage
         uses: codecov/codecov-action@v1
