--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "scripts": {
     "build": "siroc build",
     "prepublishOnly": "yarn build",
-    "dev": "nuxt dev demo",
+    "dev": "nuxt dev test/fixture",
     "lint": "eslint --ext .ts .",
     "release": "yarn test && standard-version && git push --follow-tags && npm publish",
-    "test": "yarn lint"
+    "test": "yarn lint && yarn jest"
   },
   "dependencies": {
     "fs-extra": "^9.1.0",
@@ -20,11 +20,16 @@
     "vite-plugin-vue2": "^1.2.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.13.0",
+    "@nuxt/test-utils": "^0.1.3",
     "@nuxtjs/eslint-config-typescript": "^5.0.0",
+    "@types/jest": "^26.0.20",
     "chokidar": "^3.5.1",
     "eslint": "^7.20.0",
+    "jest": "^26.6.3",
     "mkdist": "^0.1.1",
     "nuxt": "^2.15.2",
+    "playwright": "^1.9.1",
     "siroc": "^0.6.7",
     "standard-version": "^9.1.1"
   }
