--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "nuxt-vite",
   "version": "0.0.1",
+  "description": "Vite Experience with Nuxt 2",
+  "repository": "nuxt/vite",
   "license": "MIT",
   "main": "./dist/nuxt-vite.js",
   "files": [
