--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "main": "./dist/nuxt-vite.js",
   "types": "./dist/nuxt-vite.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "templates"
   ],
   "scripts": {
     "build": "siroc build",
