--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "chokidar": "^3.5.1",
     "fs-extra": "^9.1.0",
+    "semver": "^7.3.4",
     "ufo": "^0.6.7",
     "upath": "^2.0.1",
     "vite": "^2.0.3",
