chore(demo): use latest for nuxt-vite

--- a/demo/package.json
+++ b/demo/package.json
@@ -1,10 +1,11 @@
 {
   "private": true,
   "scripts": {
-    "dev": "nuxt dev"
+    "dev": "nuxt dev",
+    "post-update": "yarn upgrade --latest"
   },
   "devDependencies": {
     "nuxt": "^2.15.2",
-    "nuxt-vite": "^0.0.12"
+    "nuxt-vite": "latest"
   }
 }
