--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/preset-typescript": "^7.13.0",
     "@nuxt/test-utils": "^0.1.3",
     "@nuxt/types": "^2.15.2",
+    "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/eslint-config-typescript": "^5.0.0",
     "@types/jest": "^26.0.20",
     "eslint": "^7.21.0",
