--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "@babel/preset-typescript": "^7.13.0",
     "@nuxt/test-utils": "^0.1.3",
     "@nuxt/types": "^2.15.2",
+    "@nuxtjs/composition-api": "0.22.0",
     "@nuxtjs/eslint-config-typescript": "^5.0.0",
     "@types/jest": "^26.0.20",
+    "@vue/composition-api": "1.0.0-rc.3",
     "eslint": "^7.21.0",
     "jest": "^26.6.3",
     "mkdist": "^0.1.1",
