--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "semver": "^7.3.4",
     "ufo": "^0.6.10",
     "upath": "^2.0.1",
-    "vite": "npm:@pi0/vite-fix@2.0.4-3",
+    "vite": "^2.0.5",
     "vite-plugin-vue2": "^1.3.2"
   },
   "devDependencies": {
