--- a/docs/package.json
+++ b/docs/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@tailwindcss/jit": "^0.1.18",
     "docus": "~0.1.5",
     "nuxt": "^2.15.5",
     "vue-plausible": "^1.1.4"
