--- a/docs/package.json
+++ b/docs/package.json
@@ -6,11 +6,8 @@
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@tailwindcss/jit": "^0.1.18",
-    "docus": "~0.1.5",
-    "nuxt": "^2.15.6",
+    "docus": "^0.5.6",
     "vue-plausible": "^1.1.4"
   }
 }
