chore: update @nuxtjs/composition-api to 0.23.x (#127)
Co-authored-by: Daniel Roe <daniel@roe.dev>

--- a/package.json
+++ b/package.json
@@ -37,10 +37,9 @@
     "@babel/preset-typescript": "^7.13.0",
     "@nuxt/test-utils": "^0.2.2",
     "@nuxt/types": "^2.15.6",
-    "@nuxtjs/composition-api": "0.23.4",
+    "@nuxtjs/composition-api": "^0.24.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@types/jest": "^26.0.23",
-    "@vue/composition-api": "1.0.0-rc.8",
     "eslint": "^7.26.0",
     "jest": "^26.6.3",
     "mkdist": "^0.2.1",
