--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@nuxt/http": "^0.6.4",
     "chokidar": "^3.5.2",
     "consola": "^2.15.3",
-    "debounce": "^1.2.1",
     "fs-extra": "^10.0.0",
+    "p-debounce": "^2.1.0",
     "postcss-import": "^14.0.2",
     "postcss-import-resolver": "^2.0.0",
     "postcss-preset-env": "^6.7.0",
@@ -30,7 +30,7 @@
     "semver": "^7.3.5",
     "ufo": "^0.7.7",
     "upath": "^2.0.1",
-    "vite": "^2.3.4",
+    "vite": "^2.4.4",
     "vite-plugin-vue2": "^1.8.0"
   },
   "devDependencies": {
