--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@nuxt/types": "^2.15.8",
     "@nuxtjs/composition-api": "^0.26.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.1",
+    "@types/fs-extra": "^9.0.12",
     "@types/jest": "^27.0.0",
     "eslint": "^7.32.0",
     "jest": "^27.0.6",
