--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@nuxt/http": "^0.6.4",
+    "@vitejs/plugin-legacy": "^1.5.1",
     "chokidar": "^3.5.2",
     "consola": "^2.15.3",
     "fs-extra": "^10.0.0",
