--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "scripts": {
     "build": "siroc build && mkdist --src src/runtime --dist dist/runtime",
     "prepublishOnly": "yarn build",
-    "play": "yarn play:dev",
-    "play:dev": "nuxt dev test/fixture",
-    "play:build": "nuxt build test/fixture",
-    "play:start": "nuxt start test/fixture",
+    "dev": "yarn fixture:dev",
+    "fixture:dev": "nuxt dev test/fixture",
+    "fixture:build": "nuxt build test/fixture",
+    "fixture:start": "nuxt start test/fixture",
     "lint": "eslint --ext .ts .",
     "release": "yarn test && standard-version && git push --follow-tags && npm publish",
     "test": "yarn lint && yarn jest"
