--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dev": "yarn fixture:dev",
     "fixture:dev": "nuxt dev test/fixture",
     "fixture:build": "nuxt build test/fixture",
+    "fixture:generate": "nuxt generate test/fixture",
     "fixture:start": "nuxt start test/fixture",
     "lint": "eslint --ext .ts .",
     "release": "yarn test && standard-version && git push --follow-tags && npm publish",
