--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
         run: yarn build
 
       - name: Test
-        run: yarn jest
+        run: yarn test
 
       - name: Coverage
         uses: codecov/codecov-action@v2
