--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "fixture:start": "nuxt start test/fixture",
     "lint": "eslint --ext .ts .",
     "release": "yarn test && standard-version && git push --follow-tags && npm publish",
-    "test": "yarn lint && yarn jest"
+    "test": "mocha -b -r jiti/register ./test/*.test.*"
   },
   "dependencies": {
     "@vitejs/plugin-legacy": "^1.5.3",
@@ -40,17 +40,18 @@
     "vite-plugin-vue2": "^1.8.2"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.15.0",
-    "@nuxt/test-utils": "^0.2.2",
     "@nuxt/types": "^2.15.8",
     "@nuxtjs/composition-api": "^0.28.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.1",
     "@types/fs-extra": "^9.0.12",
     "@types/jest": "^27.0.1",
+    "@types/mocha": "^9.0.0",
+    "chai": "^4.3.4",
     "eslint": "^7.32.0",
-    "jest": "^27.1.0",
     "mkdist": "^0.3.3",
+    "mocha": "^9.1.2",
     "nuxt": "^2.15.8",
+    "ohmyfetch": "^0.3.1",
     "playwright": "^1.14.1",
     "sass": "^1.39.0",
     "siroc": "^0.16.0",
