--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "consola": "^2.15.3",
     "fs-extra": "^10.0.0",
     "p-debounce": "3",
+    "pathe": "^0.2.0",
     "postcss-import": "^14.0.2",
     "postcss-import-resolver": "^2.0.0",
     "postcss-preset-env": "^6.7.0",
     "postcss-url": "^10.1.3",
     "semver": "^7.3.5",
     "ufo": "^0.7.9",
-    "upath": "^2.0.1",
     "vite": "^2.5.7",
     "vite-plugin-vue2": "^1.8.2"
   },
